--- a/MoodleFetchBotFrontEnd/src/components/MainPage/ServerConfig/CourseSettings/TrackContentItems/TrackContentItems.module.scss
+++ b/MoodleFetchBotFrontEnd/src/components/MainPage/ServerConfig/CourseSettings/TrackContentItems/TrackContentItems.module.scss
@@ -39,9 +39,9 @@
 
 .CenterAndFitCheckboxes{
     display: flex;
-    align-items: center;
-    justify-content: center;
     overflow-y: auto;
     height: 50%;
     padding: 10px;
+    flex-direction: column;
+    align-items: center;
 }
